Another fix for card on small devices

--- a/css/screen.css
+++ b/css/screen.css
@@ -544,28 +544,28 @@ footer div p.caption{
 .card.is-flipped-left {
   transform: rotateY(-180deg);
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-  width: 450px;
+  max-width: 450px;
   height: 257px;
 }
 
 .card.is-flipped-right {
   transform: rotateY(180deg);
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-  width: 450px;
+  max-width: 450px;
   height: 257px
 }
 
 .card.is-flipped-top {
   transform: rotateX(180deg);
   box-shadow: 0 -14px 28px rgba(0,0,0,0.25), 0 -10px 10px rgba(0,0,0,0.22);
-  width: 450px;
+  max-width: 450px;
   height: 257px
 }
 
 .card.is-flipped-bottom {
   transform: rotateX(-180deg);
   box-shadow: 0 -14px 28px rgba(0,0,0,0.25), 0 -10px 10px rgba(0,0,0,0.22);
-  width: 450px;
+  max-width: 450px;
   height: 257px
 }
 
